# rust_agent

./: .env.template  .gitignore  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/docs/workflows/: pre-commit.md
backend/mock/: capability_result.json  component_gen_result.json  mock_data_result.json  plan_result.json  post_process_result.json  style_gen_result.json  utils_result.json
backend/src/: app.rs  lib.rs
backend/src/agent/: context.rs  event.rs  flow_state.rs  mod.rs
backend/src/ast/: codegen.rs  mod.rs  parser.rs
backend/src/config/: model.rs
backend/src/llm/: mock.rs  openai_compatible.rs  service.rs  structured.rs
backend/src/routes/: mod.rs
backend/src/session/: config.rs  model.rs
backend/src/sse/: mod.rs
frontend/: .env.example  .gitignore  next.config.ts  package.json  pnpm-lock.yaml
mock/: analysis_result.json  app_gen_result.json  assemble_result.json  component_result.json  dependency_result.json  files_result.json  hooks_result.json  intent_result.json  layout_result.json  page_gen_result.json  service_result.json  structure_result.json  type_result.json  ui_result.json
src/: app.rs  lib.rs  logger.rs  main.rs
src/agent/: analysis.rs  context.rs  event.rs  files.rs  graph.rs  mock.rs  mod.rs  plan.rs  runner.rs
src/config/: app.rs
src/llm/: client.rs  message.rs  mock.rs  mod.rs  openai_compatible.rs  provider.rs  registry.rs  semaphore.rs  service.rs  structured.rs
src/routes/chat/: dto.rs  (+4 more)
src/session/: memory.rs  mod.rs  store.rs
src/sse/: event.rs  phase.rs
(+140 files in other folders)
