[package]
name = "rust_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-openai = { version = "0.41.1", features = ["chat-completion"]}
axum = "0.8.9"
dotenvy = "0.15.7"
tower-http = { version = "0.7.0", features = ["cors"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"]}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"]}
tokio-stream = "0.1.18"
async-trait = "0.1.89"
futures = "0.3.32"
async-stream = "0.3.6"
swc_core = { version = "73.0.0", features = [
    "common",
    "ecma_ast",
    "ecma_parser",
    "ecma_parser_typescript",
    "ecma_visit",
    "ecma_codegen"
]}

[dev-dependencies]
tempfile = "3.15.0"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
bytes = "1"
